--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,13 +2,14 @@ version: 1.0.{build}
 image: Visual Studio 2017
 install:
 - cmd: >-
-    cinst /y wget unzip
+    cinst /y wget 7zip
     if %errorlevel% neq 0 exit /b %errorlevel%
+    refreshenv
 
     wget https://dl.bintray.com/pony-language/ponyc-win/ponyc-0.33.1-win64.zip
     if %errorlevel% neq 0 exit /b %errorlevel%
 
-    unzip --qq ponyc-0.33.1-win64.zip
+    7z e ponyc-0.33.1-win64.zip
     if %errorlevel% neq 0 exit /b %errorlevel%
 build_script:
 - cmd: >-
