--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ install:
 
     refreshenv
 
-    wget https://dl.bintray.com/pony-language/ponyc-win/ponyc-0.33.1-win64.zip
+    wget -q https://dl.bintray.com/pony-language/ponyc-win/ponyc-0.33.1-win64.zip
 
     if %errorlevel% neq 0 exit /b %errorlevel%
 
@@ -30,6 +30,6 @@ test_script:
 
     set MAX_NUM=30
 
-    pony_lua_parallel
+    .\pony-lua-parallel.exe
 
     if %errorlevel% neq 0 exit /b %errorlevel%
