--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ services:
   - docker
   
 before_install:
-  - [ "$TRAVIS_OS_NAME" == "osx" ] && brew update
-  - [ "$TRAVIS_OS_NAME" == "osx" ] && brew install ponyc pony-stable
+  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew update ; fi
+  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install ponyc pony-stable ; fi
 
 script:
-  - [ "$TRAVIS_OS_NAME" == "linux" ] && docker-compose build --build-arg MAX_NUM=10
-  - [ "$TRAVIS_OS_NAME" == "osx" ] && ponyc && ./pony_lua_parallel
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then docker-compose build --build-arg MAX_NUM=10 ; fi
+  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then ponyc && ./pony_lua_parallel ; fi
