--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,16 @@
-sudo: required
+language: c
+
+os:
+  - linux
+  - osx
 
 services:
   - docker
+  
+before_install:
+  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew update ; fi
+  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install ponyc pony-stable ; fi
 
 script:
-  - docker-compose build --build-arg MAX_NUM=10
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then docker-compose build --build-arg MAX_NUM=10 ; fi
+  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then ponyc && ./pony_lua_parallel ; fi
