--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ install:
 
     refreshenv
 
-    wget -q https://dl.bintray.com/pony-language/ponyc-win/ponyc-0.33.1-win64.zip
+    wget -q https://dl.cloudsmith.io/public/ponylang/releases/raw/versions/latest/ponyc-x86-64-pc-windows-msvc.zip
 
     if %errorlevel% neq 0 exit /b %errorlevel%
 
