--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,9 +12,9 @@ install:
 
     if %errorlevel% neq 0 exit /b %errorlevel%
 
-    unzip --qq -o ponyc-x86-64-pc-windows-msvc.zip
+    cmd /c unzip --qq -o ponyc-x86-64-pc-windows-msvc.zip
 
-    if %errorlevel% neq 0 exit /b %errorlevel%
+    dir
 
 build_script:
 - cmd: >-
